--- a/index.html
+++ b/index.html
@@ -134,6 +134,13 @@
             color: var(--text-light);
         }
 
+        .metric-note {
+            font-size: 0.7rem;
+            color: var(--text-lighter);
+            margin-top: 6px;
+            line-height: 1.3;
+        }
+
         /* Table */
         table {
             width: 100%;
@@ -439,58 +446,24 @@
             <div class="metric">
                 <div class="metric-value">$50K</div>
                 <div class="metric-label">ARR</div>
+                <div class="metric-note">Howden, ICICI Lombard, eKutir, Tata Trusts</div>
             </div>
             <div class="metric">
                 <div class="metric-value">$870</div>
                 <div class="metric-label">Revenue (H2)</div>
+                <div class="metric-note">Howden Reinsurance Brokers</div>
             </div>
             <div class="metric">
                 <div class="metric-value">+100%</div>
                 <div class="metric-label">Deployments</div>
+                <div class="metric-note">YoY growth</div>
             </div>
             <div class="metric">
                 <div class="metric-value">$11K</div>
                 <div class="metric-label">Cash</div>
+                <div class="metric-note">AMEX Seed Grant (IIT Madras IC)</div>
             </div>
         </div>
-
-        <!-- Business Table -->
-        <table>
-            <thead>
-                <tr>
-                    <th>Metric</th>
-                    <th>H1 FY25</th>
-                    <th>H2 FY25</th>
-                    <th>Notes</th>
-                </tr>
-            </thead>
-            <tbody>
-                <tr>
-                    <td>Revenue (Recognized)</td>
-                    <td>$0</td>
-                    <td>$870</td>
-                    <td>Howden Reinsurance Brokers</td>
-                </tr>
-                <tr>
-                    <td>Annual Recurring Revenue</td>
-                    <td>$0</td>
-                    <td>$50K</td>
-                    <td>Howden, ICICI Lombard, eKutir, Tata Trusts</td>
-                </tr>
-                <tr>
-                    <td>Cash in Bank</td>
-                    <td>$8K</td>
-                    <td>$11K</td>
-                    <td>AMEX Seed Grant (IIT Madras IC)</td>
-                </tr>
-                <tr>
-                    <td>Active Deployments</td>
-                    <td>0</td>
-                    <td>1</td>
-                    <td>+100%</td>
-                </tr>
-            </tbody>
-        </table>
 
         <hr>
 
@@ -501,11 +474,12 @@
             <div class="toggle-header">
                 <span class="toggle-icon">▸</span>
                 <div>
-                    <div class="toggle-title">Evolution: Agriculture → Energy</div>
+                    <div class="toggle-title">Our Evolution: From Farms to Finance to Flood Intelligence</div>
                 </div>
             </div>
             <div class="toggle-content">
-                Started solving climate risk for smallholder farmers. Same satellite-based intelligence now powers high-value decisions in energy infrastructure—pipeline integrity, renewable asset protection, critical infrastructure resilience.
+                We began by addressing climate risk for smallholder farmers, using satellite data to make climate losses measurable at the farm level. This capability naturally extended into insurance, where the same data became relevant for underwriting, claims assessment, and parametric risk design. Early insurer pilots and validations helped us understand what it takes to move from analytics to insurance-grade risk intelligence, even as full productization remained constrained by capital.<br><br>
+                Today, ASCI has evolved into flood intelligence. Floods—one of the most destructive and cross-cutting climate perils—now sit at the core of our platform, enabling decision-making across agriculture, energy, infrastructure, and urban assets.
             </div>
         </div>
 
@@ -543,18 +517,12 @@
         <hr>
 
         <!-- Traction -->
-        <h2>🚀 Traction & Recognition</h2>
+        <h2>🚀 Recognition</h2>
 
         <div class="list-item">
             <span class="list-icon">🏦</span>
             <div class="list-content">
                 <div class="list-title">RBI Innovation Hub — Climate Risk Management <span class="tag tag-yellow">In Process</span></div>
-            </div>
-        </div>
-        <div class="list-item">
-            <span class="list-icon">🤖</span>
-            <div class="list-content">
-                <div class="list-title">Accel + Google AI Program <span class="tag tag-yellow">Shortlisted</span></div>
             </div>
         </div>
         <div class="list-item">
@@ -630,7 +598,7 @@
         <hr>
 
         <!-- Marketing -->
-        <h2>📣 Marketing & Sales</h2>
+        <h2>📣 Marketing</h2>
 
         <div class="list-item">
             <span class="list-icon">📰</span>
@@ -738,26 +706,19 @@
                 </div>
             </div>
             <div>
-                <h3>Past milestones</h3>
+                <h3>Execution Priorities</h3>
                 <div class="list-item">
-                    <span class="list-icon">✓</span>
+                    <span class="list-icon">⚡</span>
                     <div class="list-content">
-                        <div class="list-title">Antler Residency</div>
-                        <div class="list-desc">₹1L grant</div>
+                        <div class="list-title">Scale validated POCs into commercial deployments</div>
+                        <div class="list-desc">Oil & gas industry</div>
                     </div>
                 </div>
                 <div class="list-item">
-                    <span class="list-icon">✓</span>
+                    <span class="list-icon">⚡</span>
                     <div class="list-content">
-                        <div class="list-title">IIT Madras IC</div>
-                        <div class="list-desc">₹15L grant</div>
-                    </div>
-                </div>
-                <div class="list-item">
-                    <span class="list-icon">✓</span>
-                    <div class="list-content">
-                        <div class="list-title">IDEX Top 12</div>
-                        <div class="list-desc">National selection</div>
+                        <div class="list-title">Deliver on active contracts</div>
+                        <div class="list-desc">Howden and Tata Trusts</div>
                     </div>
                 </div>
             </div>
