--- a/index.html
+++ b/index.html
@@ -302,6 +302,172 @@
             margin-bottom: 4px;
         }
 
+        /* Product Carousel */
+        .product-banner {
+            margin-bottom: 24px;
+            border-radius: 8px;
+            overflow: hidden;
+        }
+
+        .product-banner img {
+            width: 100%;
+            height: auto;
+            display: block;
+        }
+
+        .product-carousel {
+            margin: 24px 0;
+        }
+
+        .product-tabs {
+            display: flex;
+            gap: 0;
+            margin-bottom: 0;
+            border-bottom: 1px solid var(--border);
+        }
+
+        .product-tab {
+            flex: 1;
+            padding: 16px 12px;
+            text-align: center;
+            cursor: pointer;
+            border: none;
+            background: var(--bg-hover);
+            font-family: 'Inter', sans-serif;
+            font-size: 0.9rem;
+            color: var(--text-light);
+            transition: all 0.2s ease;
+            border-bottom: 2px solid transparent;
+        }
+
+        .product-tab:first-child {
+            border-radius: 4px 0 0 0;
+        }
+
+        .product-tab:last-child {
+            border-radius: 0 4px 0 0;
+        }
+
+        .product-tab:hover {
+            background: var(--bg-gray);
+        }
+
+        .product-tab.active {
+            background: var(--bg);
+            color: var(--text);
+            border-bottom: 2px solid var(--accent);
+        }
+
+        .product-tab-label {
+            font-size: 0.7rem;
+            text-transform: uppercase;
+            letter-spacing: 0.05em;
+            color: var(--text-lighter);
+            margin-bottom: 4px;
+        }
+
+        .product-tab-name {
+            font-family: 'IBM Plex Mono', monospace;
+            font-weight: 600;
+            font-size: 1rem;
+        }
+
+        .product-tab.active .product-tab-label {
+            color: var(--accent);
+        }
+
+        .product-panels {
+            border: 1px solid var(--border);
+            border-top: none;
+            border-radius: 0 0 4px 4px;
+        }
+
+        .product-panel {
+            display: none;
+            padding: 24px;
+        }
+
+        .product-panel.active {
+            display: block;
+        }
+
+        .product-panel-header {
+            display: flex;
+            align-items: center;
+            gap: 16px;
+            margin-bottom: 20px;
+        }
+
+        .product-logo {
+            width: 120px;
+            height: 48px;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+        }
+
+        .product-logo svg {
+            max-width: 100%;
+            max-height: 100%;
+        }
+
+        .product-panel-title {
+            font-size: 0.85rem;
+            color: var(--text-light);
+        }
+
+        .feature-columns {
+            display: grid;
+            grid-template-columns: 1fr 1fr;
+            gap: 24px;
+        }
+
+        .feature-column h4 {
+            font-size: 0.75rem;
+            text-transform: uppercase;
+            letter-spacing: 0.05em;
+            color: var(--text-lighter);
+            margin-bottom: 12px;
+            display: flex;
+            align-items: center;
+            gap: 6px;
+        }
+
+        .feature-column h4 .dot {
+            width: 6px;
+            height: 6px;
+            border-radius: 50%;
+        }
+
+        .feature-column h4 .dot.old {
+            background: var(--text-lighter);
+        }
+
+        .feature-column h4 .dot.new {
+            background: var(--green);
+        }
+
+        .feature-column ul {
+            list-style: none;
+        }
+
+        .feature-column ul li {
+            font-size: 0.85rem;
+            padding: 6px 0;
+            border-bottom: 1px solid var(--border);
+            color: var(--text);
+        }
+
+        .feature-column ul li:last-child {
+            border-bottom: none;
+        }
+
+        @media (max-width: 640px) {
+            .feature-columns {
+                grid-template-columns: 1fr;
+            }
+        }
+
         /* Partners */
         .partners {
             display: flex;
@@ -437,7 +603,7 @@
         <div class="callout">
             <span class="callout-icon">💡</span>
             <div class="callout-content">
-                <strong>TL;DR</strong> — Progressed from pilot deployment to early commercial traction in reinsurance. Cracked proof of concept in Oil & Gas. <code>$50K ARR</code> across 4 enterprise clients.
+                <strong>TL;DR</strong> — Progressed from pilot deployments to early commercial traction in insurance; validated POCs in oil & gas and now in commercial discussions with two players.
             </div>
         </div>
 
@@ -503,7 +669,11 @@
                 </div>
             </div>
             <div class="toggle-content">
-                Climate Risk & Resilience Index translates physical hazards into financial metrics: Mean Damage Ratios, Climate VaR, Retrofit CapEx. TCFD-aligned, IFRS S2 compliant. Integrates into DCF models for climate-adjusted valuations.
+                Climate change poses multifaceted risks to locations around the globe, impacting economies, ecosystems, and communities. Traditionally, climate risk assessments have focused purely on physical risks such as heat stress, drought, flooding, and other natural hazards. While these assessments shed light on changes in climate patterns, they overlook the role of human adaptations in influencing the actual impact of hazard risk.<br><br>
+                To address this gap, ASCI has developed a proprietary "Resilience-Adjusted Risk" methodology that first computes standard physical climate risk, before applying an offset coefficient to each risk based on the hazard-specific local adaptation measures that are in place. This approach recognizes that while physical risks significantly contribute to overall climate risk, the ability of locations, communities, and infrastructure to adapt can significantly alter the risk landscape.<br><br>
+                It also allows users to model adaptation gaps in a location to develop data-driven adaptation strategies.
+                <br><br>
+                <a href="https://anushdch21-lgtm.github.io/risk_resilience_framework/" target="_blank" style="color: var(--accent);">Learn more about our methodology →</a>
             </div>
         </div>
 
@@ -534,7 +704,7 @@
         <div class="list-item">
             <span class="list-icon">⛽</span>
             <div class="list-content">
-                <div class="list-title">Shell GDC Ignite Program — Top 7 <span class="tag tag-green">Completed</span></div>
+                <div class="list-title">Shell GDC Ignite Program — Top 7 <span class="tag tag-green">Active</span></div>
             </div>
         </div>
         <div class="list-item">
@@ -561,39 +731,110 @@
         <!-- Products -->
         <h2>⚡ Products</h2>
 
-        <div class="product-grid">
-            <div class="product">
-                <div class="product-name">NeoSAR</div>
-                <div class="product-desc">Infrastructure Intelligence</div>
-                <ul class="product-features">
-                    <li>Underground surveillance</li>
-                    <li>Subsidence & deformation</li>
-                    <li>Ship detection</li>
-                    <li>Oil spill profiling</li>
-                    <li>Water body monitoring</li>
-                </ul>
+        <div class="product-banner">
+            <img src="images/products-banner.jpg" alt="ASCI Products - NeoSAR, FloodIQ, Climatica" />
+        </div>
+
+        <div class="product-carousel">
+            <div class="product-tabs">
+                <button class="product-tab active" onclick="showProduct('neosar')">
+                    <div class="product-tab-label">Plan</div>
+                    <div class="product-tab-name">NeoSAR</div>
+                </button>
+                <button class="product-tab" onclick="showProduct('floodiq')">
+                    <div class="product-tab-label">Predict</div>
+                    <div class="product-tab-name">FloodIQ</div>
+                </button>
+                <button class="product-tab" onclick="showProduct('climatica')">
+                    <div class="product-tab-label">Protect</div>
+                    <div class="product-tab-name">Climatica</div>
+                </button>
             </div>
-            <div class="product">
-                <div class="product-name">Climatica</div>
-                <div class="product-desc">Parametric Design Platform</div>
-                <ul class="product-features">
-                    <li>Weather indices (agriculture)</li>
-                    <li>Flood index (infrastructure)</li>
-                    <li>Custom trigger design</li>
-                    <li>Payout calculation</li>
-                </ul>
-            </div>
-            <div class="product">
-                <div class="product-name">FloodIQ</div>
-                <div class="product-desc">Urban Flood Intelligence</div>
-                <ul class="product-features">
-                    <li>Data harvesting tool</li>
-                    <li>Custom CFD engine</li>
-                    <li>Urban modeling (Chennai)</li>
-                    <li>Damage estimation</li>
-                </ul>
+
+            <div class="product-panels">
+                <!-- NeoSAR Panel -->
+                <div class="product-panel active" id="panel-neosar">
+                    <div class="product-panel-header">
+                        <div class="product-panel-title">Infrastructure Monitoring Platform</div>
+                    </div>
+                    <div class="feature-columns">
+                        <div class="feature-column">
+                            <h4><span class="dot old"></span> Existing features</h4>
+                            <ul>
+                                <li>Ship detection</li>
+                                <li>Oil spill profiling</li>
+                                <li>Water body monitoring</li>
+                            </ul>
+                        </div>
+                        <div class="feature-column">
+                            <h4><span class="dot new"></span> New features added</h4>
+                            <ul>
+                                <li>Underground surveillance</li>
+                                <li>Subsidence & deformation</li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+
+                <!-- FloodIQ Panel -->
+                <div class="product-panel" id="panel-floodiq">
+                    <div class="product-panel-header">
+                        <div class="product-panel-title">Flood Intelligence Platform</div>
+                    </div>
+                    <div class="feature-columns">
+                        <div class="feature-column">
+                            <h4><span class="dot old"></span> Existing features</h4>
+                            <ul>
+                                <li>HEC-RAS flood modeling</li>
+                                <li>SAR based inundation extent</li>
+                            </ul>
+                        </div>
+                        <div class="feature-column">
+                            <h4><span class="dot new"></span> New features added</h4>
+                            <ul>
+                                <li>Data harvesting tool</li>
+                                <li>Custom CFD engine</li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+
+                <!-- Climatica Panel -->
+                <div class="product-panel" id="panel-climatica">
+                    <div class="product-panel-header">
+                        <div class="product-panel-title">Parametric Insurance Design Platform</div>
+                    </div>
+                    <div class="feature-columns">
+                        <div class="feature-column">
+                            <h4><span class="dot old"></span> Existing features</h4>
+                            <ul>
+                                <li>Weather indices (agriculture)</li>
+                            </ul>
+                        </div>
+                        <div class="feature-column">
+                            <h4><span class="dot new"></span> New features added</h4>
+                            <ul>
+                                <li>Flood index (infrastructure)</li>
+                                <li>Custom trigger design</li>
+                                <li>Payout calculation</li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
+
+        <script>
+            function showProduct(product) {
+                // Remove active from all tabs and panels
+                document.querySelectorAll('.product-tab').forEach(tab => tab.classList.remove('active'));
+                document.querySelectorAll('.product-panel').forEach(panel => panel.classList.remove('active'));
+                
+                // Add active to clicked tab and corresponding panel
+                event.currentTarget.classList.add('active');
+                document.getElementById('panel-' + product).classList.add('active');
+            }
+        </script>
 
         <hr>
 
@@ -624,7 +865,7 @@
         <hr>
 
         <!-- Team -->
-        <h2>👥 Team</h2>
+        <h2>👥 Talent</h2>
 
         <div class="team-grid">
             <div class="team-member">
@@ -659,7 +900,7 @@
                 <div class="team-avatar">🇺🇸</div>
                 <div class="team-info">
                     <div class="team-role">PhD Scholar</div>
-                    <div class="team-detail">NREL, USA · Hiring</div>
+                    <div class="team-detail">National Laboratory of the Rockies · Hiring</div>
                 </div>
             </div>
         </div>
