--- a/index.html
+++ b/index.html
@@ -38,24 +38,30 @@
         .page {
             max-width: 900px;
             margin: 0 auto;
-            padding: 80px 96px;
+            padding: 40px 96px 80px;
         }
 
         /* Header */
         .header {
-            margin-bottom: 48px;
+            margin-bottom: 32px;
+        }
+
+        .header-title {
+            display: flex;
+            align-items: center;
+            gap: 16px;
+            margin-bottom: 8px;
         }
 
         .header-icon {
-            font-size: 4rem;
-            margin-bottom: 16px;
+            font-size: 2.5rem;
         }
 
         .header h1 {
             font-size: 2.5rem;
             font-weight: 700;
             letter-spacing: -0.03em;
-            margin-bottom: 8px;
+            margin: 0;
         }
 
         .header-meta {
@@ -630,8 +636,10 @@
     <div class="page">
         <!-- Header -->
         <header class="header">
-            <div class="header-icon">📡</div>
-            <h1>ASCI Investor Update</h1>
+            <div class="header-title">
+                <span class="header-icon">📡</span>
+                <h1>ASCI Investor Update</h1>
+            </div>
             <p class="header-meta">H2 FY25 · Applied Science Innovations · Climate Intelligence</p>
         </header>
 
