--- a/index.html
+++ b/index.html
@@ -848,13 +848,13 @@
                 <div class="metric-note">Howden Reinsurance Brokers</div>
             </div>
             <div class="metric">
-                <div class="metric-value">+100%</div>
-                <div class="metric-label">Deployments</div>
-                <div class="metric-note">YoY growth</div>
+                <div class="metric-value">2</div>
+                <div class="metric-label">Deployed Platforms</div>
+                <div class="metric-note">Climatica and FloodIQ</div>
             </div>
             <div class="metric">
                 <div class="metric-value">$11K</div>
-                <div class="metric-label">Cash</div>
+                <div class="metric-label">Cash in Bank</div>
                 <div class="metric-note">AMEX Seed Grant (IIT Madras IC)</div>
             </div>
         </div>
