--- a/index.html
+++ b/index.html
@@ -1250,7 +1250,7 @@
         <hr>
 
         <p style="color: var(--text-light); font-size: 0.9rem; text-align: center; margin-top: 48px;">
-            ASCI · Applied Science Innovations · <a href="https://www.asci.co.in">asci.co.in</a>
+            ASCI · Applied Science Innovations · <a href="https://asci.co.in">asci.co.in</a>
         </p>
     </div>
 </body>
